@@ -95,6 +95,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - GADV 4CS               Jason Curl
 - GAMBAS                 Jesus Guardon
 - glSlang                Benny Baumann
+- Genie                  Nicolas Joseph
 - Gettext                Milian Wolff
 - GML                    José Jorge Enríquez Rodríguez
 - GNU make               Neil Bird
